@@ -45,15 +45,6 @@ if( $id == '_preview_' && isset($_SESSION['news_preview']) && isset($params['pre
 
 $parent = $smarty->get_template_parent();
 $tpl_ob = $smarty->CreateTemplate($this->GetTemplateResource($template),$cache_id,$compile_id,$parent);
-// not pushed onto stack.
-/*
-$ob = $tpl_ob;
-while( $ob ) {
-    debug_display(get_class($ob).' '.$tpl_ob->template_resource);
-    $ob = $ob->parent;
-}
-die();
-*/
 if( $preview || !$tpl_ob->IsCached() ) {
     // not cached... have to do to the work.
     if( isset($params['articleid']) && $params['articleid'] == -1 ) {
@@ -89,6 +80,5 @@ if( $preview || !$tpl_ob->IsCached() ) {
 
 //Display template
 $tpl_ob->display();
-
 
 ?>
