@@ -11,6 +11,7 @@
   (resolves problems where people have additional editor access to templates, but no other design manager permissions).
 - Fix minor javascript error (error checking).
 - Fix problems where If assign was passed to a {content} tag, do not pass it to the module on a mact request.
+- Change prototype to CMSModule::DoActionBase to pass in the current template object.
 
 CMSContentManager v1.0.1
 - Fixes for changing content types.
